# cart_api/database.py
@@ -3,6 +3,7 @@ __author__ = "Andrew Williamson <axwilliamson@godaddy.com>"
 import inspect
 import os
 import sys
+from peewee import IntegerField
 from playhouse.postgres_ext import (
     PostgresqlDatabase,
     PostgresqlExtDatabase,
@@ -87,7 +88,11 @@ class DatabaseProducts(BaseModel):
 # Define an ORM class called DatabaseCartItem which inherits from BaseModel
 # and has the properties and types defined by your swagger spec.
 # if neccesary, update EXAMPLE_CART_ITEM in cart_api_tests/test_exercises.py to match
-
+class DatabaseCartItem(BaseModel):
+    id = AutoField(primary_key=True)
+    name = CharField()
+    price = DoubleField()
+    quantity = IntegerField()
 
 # BOOTCAMPERS: Don't modify anything below
 ALL_MODELS = [
