# swagger/api.json
@@ -192,12 +192,244 @@
                     }
                 }
             }
+        },
+        "/cartitems":
+        {
+            "get":
+            {
+                "tags":
+                [
+                    "CartItem"
+                ],
+                "summary": "Return the list of CartItems in the database",
+                "description": "Return the list of CartItems in the database",
+                "operationId": "getCartItems",
+                "responses":
+                {
+                    "200":
+                    {
+                        "description": "successful operation",
+                        "content":
+                        {
+                            "application/json":
+                            {
+                                "schema":
+                                {
+                                    "type": "array",
+                                    "items":
+                                    {
+                                        "$ref": "#/components/schemas/CartItem"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500":
+                    {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "post":
+            {
+                "tags":
+                [
+                    "CartItem"
+                ],
+                "summary": "Create a new CartItem",
+                "description": "Create a new CartItem",
+                "requestBody":
+                {
+                    "description": "New CartItem data",
+                    "content":
+                    {
+                        "application/json":
+                        {
+                            "schema":
+                            {
+                                "$ref": "#/components/schemas/CartItem"
+                            }
+                        }
+                    }
+                },
+                "responses":
+                {
+                    "201":
+                    {
+                        "description": "successful create",
+                        "content":
+                        {
+                            "application/json":
+                            {
+                                "schema":
+                                {
+                                    "$ref": "#/components/schemas/CartItem"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/cartitems/{id}":
+        {
+            "parameters":
+            [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "description": "ID of the CartItem",
+                    "required": true,
+                    "schema":
+                    {
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                }
+            ],
+            "get":
+            {
+                "tags":
+                [
+                    "CartItem"
+                ],
+                "summary": "Return a single CartItem from the database",
+                "description": "Return a single CartItem from the database",
+                "operationId": "CartItem",
+                "responses":
+                {
+                    "200":
+                    {
+                        "description": "successful operation",
+                        "content":
+                        {
+                            "application/json":
+                            {
+                                "schema":
+                                {
+                                    "$ref": "#/components/schemas/CartItem"
+                                }
+                            }
+                        }
+                    },
+                    "400":
+                    {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404":
+                    {
+                        "description": "CartItem not found"
+                    },
+                    "500":
+                    {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "delete":
+            {
+                "tags":
+                [
+                    "CartItem"
+                ],
+                "summary": "Delete a single CartItem from the database",
+                "description": "Delete a single CartItem from the database",
+                "operationId": "deleteCartItem",
+                "responses":
+                {
+                    "204":
+                    {
+                        "description": "Deleted successfully"
+                    },
+                    "400":
+                    {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404":
+                    {
+                        "description": "CartItem not found"
+                    },
+                    "500":
+                    {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "patch":
+            {
+                "tags":
+                [
+                    "CartItem"
+                ],
+                "summary": "Update a CartItem",
+                "description": "Update a CartItem",
+                "requestBody":
+                {
+                    "description": "CartItem changes",
+                    "content":
+                    {
+                        "application/json":
+                        {
+                            "schema":
+                            {
+                                "type": "object",
+                                "properties":
+                                {
+                                    "quantity":
+                                    {
+                                        "type": "number",
+                                        "format": "int64"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":
+                {
+                    "204":
+                    {
+                        "description": "successful create"
+                    }
+                }
+            }
         }
     },
     "components":
     {
         "schemas":
         {
+            "CartItem":
+            {
+                "type": "object",
+                "properties":
+                {
+                    "product_id":
+                    {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "id":
+                    {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "name":
+                    {
+                        "type": "string"
+                    },
+                    "price":
+                    {
+                        "type": "number",
+                        "format": "double"
+                    },
+                    "quantity":
+                    {
+                        "type": "number",
+                        "format": "int64"
+                    }
+                }
+            },
             "Product":
             {
                 "type": "object",
